--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,10 @@ website:
   title: "MW does ML"
   favicon: images/favicon.png
   image: images/banner.png
+  site-url: https://max-we.github.io
+  open-graph: true
+  twitter-card:
+    creator: "@MaxWeichart"
   navbar:
     logo: images/favicon.png
     right:
