--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "MW does ML"
+  title: "MW"
   favicon: images/favicon.png
   image: images/banner.png
   site-url: https://max-we.github.io/ml-blog
